...
    <string name="alert_invalid_last_name_character">Last name should only contain characters or white space.  </string>
    <string name="alert_enter_email">Please enter email</string>
    <string name="alert_enter_valid_email">Please enter valid email</string>
    <string name="alert_enter_mobile_number">Please enter the phone number</string>
    <string name="alert_invalid_phone_number">Phone number should be 10 to 13 digits</string>
    <string name="alert_enter_password">Please enter password</string>
    <string name="alert_enter_old_password">Please enter old password</string>
    <string name="alert_enter_new_password">Please enter new password</string>
    <string name="alert_enter_confirm_password">Please enter confirm password</string>
    <string name="alert_enter_user_name">Please enter username</string>
    <string name="alert_invalid_user_name_character">Username should contain number or characters.  </string>
    <string name="alert_enter_store_name">Please enter store name</string>
    <string name="alert_select_category">Please select category</string>
    <string name="alert_select_transaction_date">Please select transaction date</string>
    <string name="alert_enter_total_amount">Please enter total amount</string>
...
    <string name="alert_enter_zip_code">Please enter zip code</string>
    <string name="alert_invalid_zip_code_character">Zip Code should contain number or characters.  </string>
    <string name="alert_min_zip_code_length">Zip Code minimum length should be %1$d character</string>
    <string name="alert_enter_otp">Please enter otp</string>
    <string name="alert_msg_password_and_confirm_password_not_same">Password and confirm password must be same</string>
    <string name="alert_enter_reason">Please enter your reason</string>
    <string name="alert_valid_password">Password length must be between 6 and 15 characters and contain at least one number, one capital letter and one small letter</string>
    <string name="alert_accept_tnc_and_privacy">Please agree to terms and conditions and privacy policy</string>
    <string name="alert_confirm_password_not_match">New password and confirm password must be same</string>
    <string name="alert_enter_brief">Please enter brief explanation</string>
    <string name="alert_enter_reason_for_tax">Please select reason for change tax.</string>
    <string name="alert_enter_tax">Please enter tax amount.</string>
    <string name="alert_enter_tip">Please enter tip amount.</string>
    <string name="alert_tax_amount_greater_than_total">Tax amount should be less than Pre Total amount.</string>
    <string name="alert_tax_percentage">Tax percentage should not be more than %1$s</string>
...

    <string name="login_with_email">Login With Email</string>
    <string name="login_with_phone">Login With Phone</string>

    <string name="shortcutid1">shortcut1</string>
    <string name="shortcutid2">shortcut2</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="notifications">Notifications</string>
    <string name="remove_add_0_99">Go Ad Free $0.99</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="send_feedback">Send Feedback</string>
...
    <string name="not_now">Not Now</string>
    <string name="new_version_available">New Version Available!</string>
    <string name="track_your_sales_tax">Track Your Sales Tax</string>
    <string name="back">Back</string>
    <string name="enter_your_registered_email_address_and_we_ll_email_you_your_password_reset_instructions">Enter your registered email address and we’ll email you your password reset instructions.</string>
    <string name="when_life_doesn_t_have_time_for_receipts">When Life Doesn\’t Have\nTime for Receipts</string>
    <string name="receipts">Receipt</string>
    <string name="export">Export</string>
    <string name="profile">Profile</string>
    <string name="logs">Logs</string>
    <string name="create_an_account">Create an Account</string>

    <!--    //<string name="content_success">Public Token:\n%1$s\n\n Account Ids:\n%2$s\n\n Account Names:\n%3$s\n\n Account Numbers:\n%4$s\n\n Institution Id:\n%5$s\n\n Institution Name:\n%6$s</string>-->
    <string name="content_success">Public Token:\n%1$s\n Account Ids:\n%2$s\n Account Names:\n%3$s\n Account Numbers:\n%4$s\n Institution Id:\n%5$s\n Institution Name:\n%6$s</string>
    <string name="content_cancelled">Institution Id:\n%1$s\n\n Institution Name:\n%2$s\n\n Link Session Id:\n%3$s\n\n Status:\n%4$s</string>
...
