<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/bottom_navigation_height">

            <FrameLayout
                android:id="@+id/frameContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>
        </RelativeLayout>
        <!--android:theme="@style/MyTheme.TranslucentNavigation"
        -->
        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:selectedBackgroundVisible="true" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>