<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:orientation="vertical">

        <!--Header-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingStart="5sp"
            android:paddingEnd="5sp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/HeaderTitleStyle"
                android:text="@string/change_password" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="10sp"
                android:src="@drawable/ic_arrow_back_white_24dp" />
        </RelativeLayout>

        <!--Reset Password Inputs-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/llResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="20sp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30sp"
                    android:layout_marginBottom="30sp"
                    android:src="@drawable/tyst_logo" />


                <!--Old Password-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputOldPassword"
                    style="@style/InputTextStyle"
                    android:layout_gravity="center"
                    android:hint="@string/hint_old_password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/password_max_length"
                    app:drawableTint="@color/colorTextHint">

                    <requestFocus />
                </androidx.appcompat.widget.AppCompatEditText>

                <!--New Password-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputNewPassword"
                    style="@style/InputTextStyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/password_max_length"
                    app:drawableTint="@color/colorTextHint" />


                <!--Confirm ˛Password-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputConfirmPassword"
                    style="@style/InputTextStyle"
                    android:layout_gravity="center"
                    android:layout_marginTop="10sp"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/password_max_length"
                    app:drawableTint="@color/colorTextHint" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnUpdate"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="25sp"
                    android:layout_marginBottom="250sp"
                    android:text="@string/update" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>